lib/jazz.sample/src/jazz/sample/error/module.jazz
;;;==============
;;;  JazzScheme
;;;==============
;;;
;;;; lib
;;;


(module jazz.sample.error.lib jazz


(definition public Yo
  #f))
